--- a/libs/frontend/dashboard/feature-dashboard/src/lib/duplicate-form/duplicate-form.component.html
+++ b/libs/frontend/dashboard/feature-dashboard/src/lib/duplicate-form/duplicate-form.component.html
@@ -1,3 +1,43 @@
-<p-card>
-            
+<p-card header="Dupliquer cette classe">
+
+    <ng-container *ngIf="(schoolState$ | async)?.school as school">
+        <form [formGroup]="form">
+
+            <div class="flex-row small-gap duplicate-section">
+
+                <div class="flex-column small-gap">
+                    <label for="className">Nom de la classe</label>
+                    <input
+                      formControlName="className"
+                      pInputText
+                      id="className"
+                      placeholder="nom de la classe"
+                    />
+                  </div>
+
+    <div class="flex-column small-gap">
+        <label for="range">Campus</label>
+        <p-dropdown
+          optionLabel="name"
+          formControlName="campus"
+          appendTo="body"
+          [options]="school.campuses"
+          [(ngModel)]="selectedCampus"
+          [filter]="true"
+          filterBy="name"
+          [showClear]="false"
+          placeholder="Sélectionnez un campus"
+        >
+        </p-dropdown>
+      </div>
+
+      <p-button
+      label="Dupliquer"
+      submit=""
+      (click)="duplicate()"
+      type="submit"
+    ></p-button>
+    </div>
+      </form>
+    </ng-container>
 </p-card>
